--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.coldis.library</groupId>
+			<artifactId>dto</artifactId>
+			<version>2.0.28-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	
 </project>
